refactor(backend): remove legacy purchase flow, add email verification