@@ -1,26 +1,20 @@
 package com.example.playgame.service.impl;
 
+import com.example.playgame.entity.Bucket;
 import com.example.playgame.entity.Game;
 import com.example.playgame.entity.Genre;
-import com.example.playgame.entity.Purchase;
-import com.example.playgame.entity.enums.BucketType;
 import com.example.playgame.exception.notfound.GenreNotFoundException;
 import com.example.playgame.repository.BucketRepository;
-import com.example.playgame.repository.GameRepository;
 import com.example.playgame.repository.GenreRepository;
-import com.example.playgame.repository.PurchaseRepository;
-import com.example.playgame.service.AuthService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.anyLong;
@@ -32,71 +26,57 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 public class FavouriteGenresServiceTest {
     @Mock
-    private PurchaseRepository purchaseRepository;
-
-    @Mock
-    private GameRepository gameRepository;
-
-    @Mock
     private GenreRepository genreRepository;
 
     @Mock
     private BucketRepository bucketRepository;
-
-    @Mock
-    private AuthService authService;  // Мокаем AuthService
 
     @InjectMocks
     private FavouriteGenresServiceImpl favouriteGenresService;
 
     private Long accountId;
     private Long genreId;
-    private Game game;
-    private Purchase purchase;
+    private Game gameWithGenre;
 
     @BeforeEach
     public void setUp() {
         accountId = 1L;
         genreId = 1L;
 
-        game = new Game();
-        game.setId(1L);
+        gameWithGenre = new Game();
+        gameWithGenre.setId(1L);
         Genre genre = new Genre();
         genre.setId(genreId);
-        game.setGenres(Collections.singletonList(genre));
-
-        purchase = new Purchase();
-        purchase.setGame(game);
+        gameWithGenre.setGenres(Collections.singletonList(genre));
     }
 
     @Test
-    void testUpdateFavouriteGenres_Success() {
-        when(purchaseRepository.findByOwnerId(accountId)).thenReturn(Collections.singletonList(purchase));
-        when(gameRepository.getRatingByAccountAndGame(game.getId(), accountId)).thenReturn(Optional.of(BigDecimal.valueOf(4.5)));
-        when(bucketRepository.findByAccountIdAndBucketType(accountId, BucketType.WISHLIST.toString())).thenReturn(Optional.empty());
-
-        // Теперь вызываем метод с извлеченным accountId
-        favouriteGenresService.updateFavouriteGenres(accountId);  // Передаем accountId
-
-        Map<Long, BigDecimal> genreCount = new HashMap<>();
-        favouriteGenresService.collectGenres(Collections.singletonList(game), genreCount, BigDecimal.ONE); // Use a single game with a weight of 1
-
-        List<Long> favouriteGenreIds = genreCount.entrySet().stream()
-                .filter(entry -> entry.getValue().compareTo(BigDecimal.valueOf(3)) >= 0)
-                .map(Map.Entry::getKey)
-                .toList();
-
-        if (!favouriteGenreIds.isEmpty()) {
-            verify(genreRepository, times(1)).addFavouriteGenre(accountId, favouriteGenreIds.get(0));  // Assuming the genre ID is the first in the list
+    void testUpdateFavouriteGenres_FromWishlist_AddsGenre() {
+        List<Game> wishlist = new ArrayList<>();
+        for (int i = 0; i < 3; i++) {
+            Game g = new Game();
+            g.setId((long) (i + 1));
+            Genre genre = new Genre();
+            genre.setId(genreId);
+            g.setGenres(Collections.singletonList(genre));
+            wishlist.add(g);
         }
+        Bucket bucket = new Bucket();
+        bucket.setGames(wishlist);
+
+        when(bucketRepository.findBucketByAccount_Id(accountId)).thenReturn(Optional.of(bucket));
+        when(genreRepository.existsByAccountIdAndGenreId(accountId, genreId)).thenReturn(false);
+
+        favouriteGenresService.updateFavouriteGenres(accountId);
+
+        verify(genreRepository, times(1)).addFavouriteGenre(accountId, genreId);
     }
 
     @Test
-    public void testUpdateFavouriteGenres_NoPurchases() {
-        when(purchaseRepository.findByOwnerId(accountId)).thenReturn(Collections.emptyList());
+    public void testUpdateFavouriteGenres_EmptyWishlist() {
+        when(bucketRepository.findBucketByAccount_Id(accountId)).thenReturn(Optional.empty());
 
-        // Теперь вызываем метод с извлеченным accountId
-        favouriteGenresService.updateFavouriteGenres(accountId);  // Передаем accountId
+        favouriteGenresService.updateFavouriteGenres(accountId);
 
         verify(genreRepository, never()).addFavouriteGenre(anyLong(), anyLong());
     }
@@ -106,9 +86,11 @@ public class FavouriteGenresServiceTest {
         when(genreRepository.existsById(genreId)).thenReturn(true);
         when(genreRepository.existsByAccountIdAndGenreId(accountId, genreId)).thenReturn(false);
 
-        favouriteGenresService.addToFavourites(accountId, Collections.singletonList(genreId));
+        favouriteGenresService.addToFavourites(accountId, List.of(1L, 2L, 3L));
 
-        verify(genreRepository, times(1)).addFavouriteGenre(accountId, genreId);
+        verify(genreRepository, times(1)).addFavouriteGenre(accountId, 1L);
+        verify(genreRepository, times(1)).addFavouriteGenre(accountId, 2L);
+        verify(genreRepository, times(1)).addFavouriteGenre(accountId, 3L);
     }
 
     @Test
@@ -123,19 +105,21 @@ public class FavouriteGenresServiceTest {
         when(genreRepository.existsById(genreId)).thenReturn(false);
 
         assertThrows(GenreNotFoundException.class, () -> {
-            favouriteGenresService.addToFavourites(accountId, Collections.singletonList(genreId));
+            favouriteGenresService.addToFavourites(accountId, List.of(1L, 2L, 3L));
         });
     }
 
     @Test
     public void testAddToFavouritesForNewAccount_AlreadyExists() {
-        when(genreRepository.existsById(genreId)).thenReturn(true);
-        when(genreRepository.existsByAccountIdAndGenreId(accountId, genreId)).thenReturn(true);
+        when(genreRepository.existsById(1L)).thenReturn(true);
+        when(genreRepository.existsById(2L)).thenReturn(true);
+        when(genreRepository.existsById(3L)).thenReturn(true);
+        when(genreRepository.existsByAccountIdAndGenreId(accountId, 1L)).thenReturn(true);
+        when(genreRepository.existsByAccountIdAndGenreId(accountId, 2L)).thenReturn(true);
+        when(genreRepository.existsByAccountIdAndGenreId(accountId, 3L)).thenReturn(true);
 
-        favouriteGenresService.addToFavourites(accountId, Collections.singletonList(genreId));
+        favouriteGenresService.addToFavourites(accountId, List.of(1L, 2L, 3L));
 
         verify(genreRepository, never()).addFavouriteGenre(anyLong(), anyLong());
     }
 }
-
-
